--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-board",
   "version": "1.0.0",
-  "description": "Simple vue board for study",
+  "description": "bootstrap vue sample project",
   "author": "MINJI KIM <rlaalswl627@gmail.com>",
   "private": true,
   "scripts": {
@@ -12,7 +12,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2",
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.6.1",
+    "vue": "^2.6.11",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
